new fix bug